Wrap words on notification to avoid overflow

--- a/src/less/notifications.less
+++ b/src/less/notifications.less
@@ -11,5 +11,6 @@
     margin-top: 5px;
     width: 100%;
     z-index: 9999;
+    overflow-wrap: break-word;
   }
 }
